--- a/Bracket_Array_Tables.tex
+++ b/Bracket_Array_Tables.tex
@@ -1,10 +1,15 @@
-\documentclass[11 pt]{article}
+\documentclass[11pt]{article}
 \usepackage{amsfonts,amssymb,amsmath}
-\parindent 0px
+\setlength{\parindent}{0pt}
 
 \begin{document}
-The distributive property statess that $a(b+c)=ab+ac$,\\for
-all $a,b,c\in\mathbb{R}$. \\[6pt]
-The equivalance class of a is $[a]$.
+
+The distributive property states that $a(b+c) = ab + ac$, \\
+for all $a, b, c \in \mathbb{R}$. \\[6pt]
+
+The equivalence class of $a$ is $[a]$. \\ [6pt]
+
+The set $A$ is defined to be $\{1, 2, 3\}$.\\[6pt]
+The function tickets costs $\$11.5$.
 
 \end{document}
