adding text formatting file

--- a/Bracket_Array_Tables.tex
+++ b/Bracket_Array_Tables.tex
@@ -43,7 +43,7 @@ Tables:\\
         $x$ & 1 & 2 & 3 & 4 & 5 \\ \hline
         $f(x)$ & $\frac{1}{2}$  & 11 & 12 & 13 & 14 \\ \hline
     \end{tabular}
-    
+    \caption{These represent the function $f(x)$}
 \end{table}
 
 
