--- a/Bracket_Array_Tables.tex
+++ b/Bracket_Array_Tables.tex
@@ -31,7 +31,7 @@ Tables:\\
 \begin{tabular}{|c|c|c|c|c|c|}
     \hline
     $x$ & 1 & 2 & 3 & 4 & 5 \\ \hline
-    $f(x)$ & 10 & 11 & 12 & 13 & 14 \\ \hline
+    $f(x)$ & 10 & 11 & 12 & 13 & 14 & 15\\ \hline
 \end{tabular}
 
 \vspace{1cm}
